--- a/ClientSideApp/server/build.gradle
+++ b/ClientSideApp/server/build.gradle
@@ -11,30 +11,15 @@ java {
 dependencies {
     // our shared module
     implementation project(path: ':shared')
-    // https://mvnrepository.com/artifact/com.amazonaws/aws-lambda-java-core
-    implementation group: 'com.amazonaws', name: 'aws-lambda-java-core', version: '1.2.1'
-
-    // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-lambda
-    implementation group: 'com.amazonaws', name: 'aws-java-sdk-lambda', version: '1.11.967'
-    implementation 'com.amazonaws:aws-lambda-java-core:1.2.1'
 
     // https://mvnrepository.com/artifact/com.amazonaws/aws-lambda-java-events
-    implementation group: 'com.amazonaws', name: 'aws-lambda-java-events', version: '3.8.0'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
-    // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-dynamodb
-    implementation group: 'com.amazonaws', name: 'aws-java-sdk-dynamodb', version: '1.11.989'
-
-    // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-sqs
-    implementation group: 'com.amazonaws', name: 'aws-java-sdk-sqs', version: '1.11.994'
-
+    // https://mvnrepository.com/artifact/org.apache.spark/spark-core
+    implementation group: 'com.sparkjava', name: 'spark-core', version: '2.9.3'
+    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
 
     // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3
-    implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.989'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.2'
     testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
-
-
 }
-
-
