--- a/ClientSideApp/server/build.gradle
+++ b/ClientSideApp/server/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.spark/spark-core
     implementation group: 'com.sparkjava', name: 'spark-core', version: '2.9.3'
     implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.36.0.3'
+
 
     // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.2'
