--- a/ClientSideApp/app/build.gradle
+++ b/ClientSideApp/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    implementation 'org.mongodb:mongodb-driver-sync:4.4.0'
 }
