--- a/ClientSideApp/server/build.gradle
+++ b/ClientSideApp/server/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     // https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.2'
     testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+
+    implementation 'org.mongodb:mongodb-driver-sync:4.4.0'
 }
